--- a/images-ubi/apps/greetings/Containerfile
+++ b/images-ubi/apps/greetings/Containerfile
@@ -1,5 +1,5 @@
-FROM registry.ocp4.example.com:8443/ubi9/nodejs-18-minimal:1-51
-
+# FROM registry.ocp4.example.com:8443/ubi9/nodejs-18-minimal:1-51
+FROM registry.access.redhat.com/ubi9/nodejs-18-minimal:1-89
 ENV PORT=80
 EXPOSE ${PORT}
 
